Removed navbar collapsing Added fixed background
git-svn-id: https://svn.eiffel.com/eiffelstudio/trunk@93744 8089f293-4706-0410-a29e-feb5c42a2edf

--- a/Src/tools/iron/delivery/resources/node/html/style.css
+++ b/Src/tools/iron/delivery/resources/node/html/style.css
@@ -108,5 +108,6 @@ body {
 	background: -ms-linear-gradient(top,  #a7cfdf 0%,#23538a 100%); /* IE10+ */
 	background: linear-gradient(to bottom,  #a7cfdf 0%,#23538a 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a7cfdf', endColorstr='#23538a',GradientType=0 ); /* IE6-9 */
+	background-attachment: fixed;
 }
   
